fixed some changes in html, fixed some issue with question java page, fixed some javascritp issues for the correct answer and wrong answer, added a new css for the correct and wrong color.

--- a/style.css
+++ b/style.css
@@ -267,6 +267,12 @@ section .option_list .option:hover{
     border-color: #a42834;
 }
 
+.option_list .option.correct{
+    color: #155724;
+    background: #f8d7da;
+    border-color: #a42834;
+}
+
 
 .quiz_box footer{
     height: 60px;
